assets/css/stylesheet.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    /* more on this crazy alphanumerical value in a minute! */
    color: #39a6b2;
    font-family: helvetica, arial, sans-serif;
}
/* apply styles to <header> */
header {
    padding: 20px 35px;
    background-color: #39a6b2;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;

}
header h1 {
    font-weight: bold;
    font-size: 36px;
    color: #fce138;
    margin: 0;
}

header a {
    text-decoration: none;
    color: #fce138;

}
header nav {
    margin: 7px 0;
}
header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
}
header nav ul li a {
    margin: 0 30px;
    font-weight: lighter;
    font-size: 1.55vw;
}
footer {
    background: #fce138;
    width: 100%;
    padding: 40px 35px;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
footer h2 {
    color: #024e76;
    font-size: 30px;
    margin: 0;
}
footer div{
    line-height: 1.5;
    text-align: right;
}
footer a {
    color: #024e76;
}
section {
    padding: 60px;
}
/* Hero Style Start */
.hero {
    background-image: url('../images/hero-bg.jpg');
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}
.hero-form {
background-color: #fce138;
padding: 20px;
color: #024e76;
border-style: solid;
border-width: 3px;
border-color: #024e76;
}
.hero-form h3 {
    font-size: 24px;
    margin: 0;
}

.hero-form p {
    margin: 5px 0 15px 0;
}

.form-input {
    border: 1px solid #024e76;
    display: block;
    padding: 7px 15px;
    font-size: 16px;
    color: #024e76;
    width: 100%;
    margin-bottom: 15px;
}

.hero-form label {
    margin: 0 5px;
    width: 40%;
    margin: 3.5%;
}

.hero-form button {
    color: #fce138;
    background-color: #024e76;
    border: none;
    padding: 10px 20px;
    font-size: 16px;
}

.hero-cta {
    width: 35%;
    text-align: right;
    margin: 3.5%;
    color: #fff;
    font-size: 18px;
    line-height: 1.3;
}

.hero-cta h2 {
font-style: italic;
font-size: 55px;
color: #fce138;
}
/* Hero Style End */

.intro p{
    line-height: 1.7;
    color: #39a6b2;
    width: 80%;
    font-size: 20px;
    margin: 0 auto;
    text-align: center;
}

.step {
    margin: 50px auto;
    padding-bottom: 50px;
    width: 80%;
    border-bottom: 1px solid #39a6b2;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

.step-img {
    flex: 1 12%;
    margin-right: 20px;
}
.step-img img {
    max-width: 100%;
}
.steps {
    background: #fce138;
}


.step h3 {
    color: #024e76;
    font-size: 46px;
    flex: 1 30%;
}

.step-info {
    flex: 2 70%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.step-text{
    flex: 12;
}

.step-text p {
    color: #39a6b2;
    font-size: 18px;
}
.step-text h4 {
    font-size: 26px;
    line-height: 1.5;
    color: #024e76;

}

.section-title {
font-size: 55px;
color: #024e76;
border-bottom: 3px solid;
padding-bottom: 20px;
text-align: center;
margin: 0 auto 35px auto;
width: 50%;
}

.primary-border {
    border-color: #fce138;
}

.secondary-border {
    border-color: #39a6b2;
}

.trainer {
    margin: 0 auto 20px auto;
    flex: 1;
    background: #024e76;
    color: #fce138;
}

.trainers {
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.trainer img {
    width: 100%;
}

.trainer-bio {
    padding: 25px;
    line-height: 1.3;
}

.text-left {
    text-align: left;
}

.text-right {
    text-align: right;
}

.trainer-bio h3 {
    font-size: 28px;
}

.trainer-bio h4 {
    font-weight: lighter;
    font-size: 22px;
    margin-bottom: 15px;
}

.trainer-bio p {
    font-size: 17px;
}

.contact {
    background: #024e76;
}

.contact h2 {
    color: #fce138;
    text-align:center;
    border-bottom-color: #39a6b2;
}

.contact-info > * {
    flex: 1;
    margin: 15px;
}
.contact-info{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
.contact-info iframe {
    height: 400px;
}

.contact-info div {
color: white;
}

.contact-info h3 {
    color: #fce138;
    font-size: 32px;
}

.contact-info p,
.contact-info address {
    margin: 20px 0 0 0;
    line-height: 1.5;
    font-size: 16px;
    font-style: normal;
}
.contact-form input, .contact-form textarea {
    border: 1px solid #024e76;
    display: block;
    padding: 7px 15px;
    font-size: 16px;
    color: #024e76;
    width: 100%;
    margin-bottom: 15px;
    margin-top: 5px;
}

.contact-form button {
width : 100%;
border: none;
background: #fce138;
color: #024e76;
text-align: center;
padding:15px 0;
font-size: 16px;

}
.contact-info a {
    color: #fce138;
}

.flex-row {
    display: flex;
}

